cluster/apps/networking-system/external-services/incus/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: incus
spec:
  hostnames: ["incus.${SECRET_DOMAIN_0}"]
  parentRefs:
    - name: internal
      namespace: networking-system
      port: 443
  rules:
    - backendRefs:
        - name: incus
          port: 8443
